[gd_scene load_steps=15 format=3 uid="uid://dpmuagvcdif1x"]

[ext_resource type="Script" uid="uid://cyqygd4rcpd4b" path="res://scripts/lessonlist.gd" id="1_op03n"]
[ext_resource type="PackedScene" uid="uid://wd63efdi6bdn" path="res://scenes/BaseBComponent.tscn" id="2_2ae81"]
[ext_resource type="Material" uid="uid://jm8oyahk342s" path="res://resources/context_menu.tres" id="3_a3qcg"]
[ext_resource type="Script" uid="uid://dx40hpbce8w60" path="res://scripts/button_config.gd" id="5_my415"]
[ext_resource type="Material" uid="uid://crjr13k12egng" path="res://scenes/splash.tres" id="6_u2ljf"]
[ext_resource type="Texture2D" uid="uid://e3v60pbtb0op" path="res://game_assets/icons/splines.png" id="7_viykq"]
[ext_resource type="Theme" uid="uid://cx365ld2mgjne" path="res://resources/theme_base.tres" id="8_637i6"]
[ext_resource type="Script" uid="uid://dqpr2y7tbsc13" path="res://scripts/works_list.gd" id="9_t4awa"]
[ext_resource type="Script" uid="uid://dtwj74o465brs" path="res://scripts/loc.gd" id="10_ep2gh"]
[ext_resource type="Script" uid="uid://3iluo5wg2wdh" path="res://scripts/works_unroll.gd" id="11_801vn"]
[ext_resource type="Theme" uid="uid://74kwx22ikciq" path="res://resources/theme_headers.tres" id="12_us0xa"]
[ext_resource type="Script" uid="uid://cink4uduoxu4b" path="res://scripts/end.gd" id="14_8cc5f"]

[sub_resource type="Resource" id="Resource_sfqu4"]
script = ExtResource("5_my415")
hover_color = Color(1.300188, 1.300188, 1.300188, 1)
hover_mult = 1.15
_hover_scale = 1.02
press_color = Color(1.1, 0.9, 0.9, 1)
_press_scale = 0.97
animation_speed = 1.951
animation_decay = 4.564
metadata/_custom_type_script = "uid://dx40hpbce8w60"

[sub_resource type="Resource" id="Resource_vtj8a"]
script = ExtResource("5_my415")
as_mult = true
hover_color = Color(1.1, 1.1, 1.1, 1)
hover_mult = 1.3
_hover_scale = 1.05
press_color = Color(0.72, 0.72, 0.72, 1)
_press_scale = 0.98
animation_scale = 19.697
animation_speed = 3.473
animation_decay = 6.0
animation_duration = 1.359
metadata/_custom_type_script = "uid://dx40hpbce8w60"

[node name="Node2D" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_op03n")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 8
material = ExtResource("6_u2ljf")
instance_shader_parameters/corner_radius_width_add = Vector2(9.365, 1)
instance_shader_parameters/outline_color = Color(0.85, 0.85, 0.85, 1)
instance_shader_parameters/tuning = Color(0, 0, 0, 0.7529412)
layout_mode = 0
offset_left = 326.0
offset_top = 99.0
offset_right = 848.0
offset_bottom = 522.0

[node name="root" type="Control" parent="ColorRect"]
layout_mode = 1
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="i" type="Sprite2D" parent="ColorRect/root"]
position = Vector2(23.000015, 21)
scale = Vector2(0.9496938, 0.9496938)
texture = ExtResource("7_viykq")

[node name="Label" type="Label" parent="ColorRect/root"]
modulate = Color(0.41, 0.41, 0.41, 1)
z_index = 1
layout_mode = 0
offset_left = 36.0
offset_top = 9.0
offset_right = 140.84766
offset_bottom = 52.0
scale = Vector2(0.600218, 0.600218)
theme = ExtResource("8_637i6")
text = "/lessons"

[node name="list" parent="ColorRect" instance=ExtResource("2_2ae81")]
z_index = 3
material = ExtResource("3_a3qcg")
instance_shader_parameters/extents = Vector2(0, 0)
instance_shader_parameters/outline_color = Color(1, 1, 1, 0)
instance_shader_parameters/tuning = Color(0.509804, 0.509804, 0.509804, 0.439216)
layout_mode = 0
offset_left = 20.0
offset_top = 85.00001
offset_right = 555.5556
offset_bottom = 85.00001
scale = Vector2(0.9, 0.9)
color = Color(1, 1, 1, 0)
script = ExtResource("9_t4awa")
top = true
base_size = Vector2(535.5556, 0)
static_mode = true
expanded_size = 344
mouse_open = false
dynamic_size = true
max_size = 344
config = null
in_splash = true

[node name="name" parent="ColorRect/list" instance=ExtResource("2_2ae81")]
z_index = 5
instance_shader_parameters/extents = Vector2(0, 0)
instance_shader_parameters/outline_color = Color(0.3, 1, 0.5566666, 1)
instance_shader_parameters/tuning = Color(0.2688, 0.84, 0.47823992, 0.8980392)
layout_mode = 0
offset_left = 200.0
offset_top = 221.333
offset_right = 436.0
offset_bottom = 296.6667
pivot_offset = Vector2(118, 37.666847)
button_type = 1
placeholder = true
auto_trim_text = true
text = "Hello!!"
text_alignment = Vector2(-1, -1)
text_offset = Vector2(15, 15)
base_size = Vector2(236, 75.333694)
alignment = Vector2(0.5, 0.5)
mouse_open = false
config = SubResource("Resource_sfqu4")
in_splash = true
still_hover_in_block = true

[node name="Loc" type="Node" parent="ColorRect/list/name"]
script = ExtResource("10_ep2gh")
auto = true
localizations_ru = Dictionary[String, String]({
"untitled": "Безымянный"
})
localizations_kz = Dictionary[String, String]({
"untitled": "Атаусыз"
})
metadata/_custom_type_script = "uid://dtwj74o465brs"

[node name="ProceduralNodes" type="Node" parent="ColorRect/list" node_paths=PackedStringArray("instance", "parent_easy")]
script = ExtResource("11_801vn")
easy = true
instance = NodePath("../name")
parent_call = "unroll"
parent_easy = NodePath("../../..")
metadata/_custom_type_script = "uid://cppqde4187p8n"

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 24.0
offset_top = 38.0
offset_right = 475.0
offset_bottom = 75.0
theme = ExtResource("12_us0xa")
text = "Your lessons"

[node name="Loc" type="Node" parent="ColorRect/Label"]
script = ExtResource("10_ep2gh")
auto = true
localizations_ru = Dictionary[String, String]({
"_": "Список уроков"
})
localizations_kz = Dictionary[String, String]({
"_": "Сабақтар тізімі"
})
metadata/_custom_type_script = "uid://dtwj74o465brs"

[node name="lessons" parent="ColorRect" instance=ExtResource("2_2ae81")]
instance_shader_parameters/corner_radius_width_add = Vector2(-9, 0)
instance_shader_parameters/extents = Vector2(0, 0)
layout_mode = 0
offset_left = 402.93927
offset_top = 43.999996
offset_right = 489.2148
offset_bottom = 69.0
scale = Vector2(1.1770253, 1.1770253)
pivot_offset = Vector2(43.13777, 12.500002)
mouse_filter = 1
color = Color(1, 1, 1, 0)
button_type = 1
top = true
hint = &"login"
base_scale_x = 0.45
resize_after = 10
text = "Projects"
base_size = Vector2(86.27554, 25.000004)
alignment = Vector2(0.5, 0.5)
expanded_size = 98
arrangement_padding = Vector2(5, 5)
mouse_open = false
menu_name = &"g"
max_size = 170
config = SubResource("Resource_vtj8a")
in_splash = true

[node name="Loc" type="Node" parent="ColorRect/lessons"]
script = ExtResource("10_ep2gh")
auto = true
localizations_ru = Dictionary[String, String]({
"_": "Проекты"
})
localizations_kz = Dictionary[String, String]({
"_": "Жобалар"
})
metadata/_custom_type_script = "uid://dtwj74o465brs"

[node name="Node" type="Node" parent="."]
script = ExtResource("14_8cc5f")

[connection signal="child_button_release" from="ColorRect/list" to="." method="_on_list_child_button_release"]
[connection signal="scroll_changed" from="ColorRect/list" to="." method="_on_list_scroll_changed"]
[connection signal="released" from="ColorRect/lessons" to="." method="_on_lessons_released"]
